# diffurch

./: .gitignore  BOXLESS_NOTES.txt  CHANGELOG.md  Cargo.toml  NOTES.md  NOTES2.md  README.md  TODO.md  data_ode.json  notes.typ
_benches/: 2d_arrays.rs  equation_types.rs  polynomial.rs
_examples/: loc-bounce.rs  plotting-textplots.rs
_tests/: equation_types.rs  event_filtering.rs
benches/: closures.rs  harmonic_oscillator.rs  polynomial.rs
examples/: api-symbols.rs  bouncing-ball.rs  bouncing_ball.rs  bouncing_gravity.rs  chaotic_billiard.rs  clamp_dde.rs  dde-linear-1-sin.rs  dde-relay-clamp.rs  egg-billiard.rs  equation_macro.rs  event_filtering.rs  event_interface.rs  exponent.rs  falling_ball.rs  harmonic_oscillator.rs  linear_dde.rs  linear_ndde.rs  loc-billiard.rs  loc-bounce.rs  loc-switch-parameter.rs  lorenz.rs  measure.rs  ndde-linear-1-sin-2.rs  ndde-linear-1-sin.rs  ndde-nonlinear.rs  ndde_bomb.rs  ndde_bomb2.rs  ndde_bomb3.rs  nonlinear_ndde.rs  ode-2-relay-msign.rs  ode-chaos-lorenz.rs  ode-linear-1-exp.rs  ode-linear-2-sin.rs  ode-linear-3-fibonacci.rs  pgfplots.rs  plotters.rs  plotting-textplots.rs  return-interpolant.rs  test_equations.rs
examples_/: dde-linear-1-sin-2.rs
notes/: discontinuous_equations.md  equation_macro.rs  substeps.md
src/: callback.rs  delay.rs  detection.rs  equation.rs  event.rs  filter.rs  fn_hlist.rs  hlist.rs  hlists.rs  initial_condition.rs  interval.rs  lib.rs  loc.rs  macros.rs  polynomial.rs  rk.rs  solver.rs  stable_index_deque.rs  state.rs  stepsize.rs  symbol.rs  traits.rs
tests/: callbacks_struct.rs  conflicting_implementations.rs  delay_propagation.rs  derive.rs  equation_types.rs  event_filtering.rs  explicit-solutions.rs  json.rs  (+9 more)
(+47 files in other folders)
