[package]
name = "diffurch"
version = "0.0.2"
edition = "2024"
authors = ["Danila Bain <danila.bain@yandex.com>"]
license = "MIT OR Apache-2.0"

description = "Numerical solver for ordinary and delay differential equations"
repository = "https://github.com/Danila-Bain/diffurch"
homepage = "https://github.com/Danila-Bain/diffurch"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = [
  "ODE",
  "numerical",
  "Runge-Kutta",
  "event",
  "dense",
]

[dev-dependencies]
pgfplots = "0.5.1"
textplots = "0.8.7"
rgb = "0.8.50"
term_size = "0.3.2"
ndarray = "0.16.1"
serde_json = "1.0.140"
rayon = "1.10.0"
ndarray-linalg = "0.17.0"

[dependencies]
hlist2 = "0.0.15"
num-traits = "0.2.19"


