[package]
name = "diffurch"
version = "0.0.3"
edition = "2024"
authors = ["Danila Bain <danila.bain@yandex.com>"]
license = "MIT OR Apache-2.0"

description = "Numerical solver for ordinary and delay differential equations"
repository = "https://github.com/Danila-Bain/diffurch"
homepage = "https://github.com/Danila-Bain/diffurch"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = [
  "ODE",
  "numerical",
  "Runge-Kutta",
  "event",
  "dense",
]

[dev-dependencies]
pgfplots = "0.5.1"
textplots = "0.8.7"
rgb = "0.8.50"
term_size = "0.3.2"
ndarray = "0.16.1"
serde_json = "1.0.140"
rayon = "1.10.0"

[dependencies]
hlist2 = "0.0.15"
num = "0.4.3"
num-traits = "0.2.19"

replace = { path="macros/replace" }
# trait_hlist = { path="macros/trait_hlist" }
hlist2_trait_macro = { git="https://github.com/Danila-Bain/hlist2_trait_macro.git" }

